--- a/app/templates/Add_Ap/NewAp.html
+++ b/app/templates/Add_Ap/NewAp.html
@@ -28,7 +28,7 @@
         <input type="text" name="Nom" required><br>
         
         <label for="Adresse">Adresse :</label>
-        <input type="text" name="Adresse" required><br>
+        <input type="text" name="Adresse" ><br>
 
         <label for="Pieces">Pièces :</label>
         <input type="numeric" name="Pieces" required><br>
