--- a/app/templates/Add_Co/NewCo.html
+++ b/app/templates/Add_Co/NewCo.html
@@ -27,11 +27,11 @@
         <label for="Nom">Nom :</label>
         <input type="text" name="Nom" required><br>
 
-        <label for="banque">Banque :</label>
-        <input type="text" name="banque"><br>
+        <label for="Banque">Banque :</label>
+        <input type="text" name="Banque"><br>
 
-        <label for="type">Type :</label>
-        <input type="text" name="type"><br>
+        <label for="Type">Type :</label>
+        <input type="text" name="Type"><br>
 
         <label for="Solde">Solde :</label>
         <input type="numeric" name="Solde" required><br>
