--- a/app/templates/home/indexco.html
+++ b/app/templates/home/indexco.html
@@ -5,7 +5,7 @@
 
 {% block content %}
   
-    <h5>Bienvenue sur votre gestionnaire d'investissement, {{ g.user.Prenom }}</h5>
+    <h5>Boujour {{ g.user.Prenom }}, bienvenue sur votre gestionnaire d'investissement</h5>
   
   <div id="container3D"></div>
 
